// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rmrk2.0.0 Consolidator: EQUIP Equip NFT on another NFT successfully 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "base-4-KBASE777.backpack",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "parts": Array [
            "background",
            "backpack",
            "tail",
          ],
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Equip NFT with the highest priority on another NFT successfully 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "base-4-KBASE777.backpack",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "parts": Array [
            "background",
            "backpack",
            "tail",
          ],
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "xXhhT",
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
        Object {
          "id": "xXhhT",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should Equip NFT with * slot whitelisting 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": "*",
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "base-4-KBASE777.background",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.background",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip NFT on a non-existent parent NFT 1`] = `
Object {
  "bases": Object {},
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 4,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Attempting to equip NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777 who's owner is account HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F. You can only EQUIP on parent NFT",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip NFT while base is still pending accept 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 9,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[EQUIP] Cannot equip NFT 6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888 because parent's base is pending",
      "object_id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "pending": true,
        },
      ],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": true,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip NFT without compatible resource 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 8,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Cannot equip NFT 6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888 because it has no compatible resource base-4-KBASE777.backpack",
      "object_id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-incompatible.slot",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip NFT without it's base slot whitelisting this collection 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 8,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Cannot equip NFT 6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888 because it's base base-4-KBASE777 slot background doesn't allow it's collection d43593c715a56da27d-KANARIABIRDS",
      "object_id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.background",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip burned NFT 1`] = `
Object {
  "bases": Object {},
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 5,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Attempting to equip burned NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "true",
      "changes": Array [
        Object {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "burned",
          "new": "true",
          "old": "",
          "opType": "BURN",
        },
        Object {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 0n,
          "old": 0n,
          "opType": "BURN",
        },
      ],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "equipped": "",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip in occupied slot 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 3,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 11,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Cannot equip NFT 9-d43593c715a56da27d-KANARIABIRDS-KANR-00000999 because the slot \\"base-4-KBASE777.backpack\\" is already occupied by NFT \\"6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888\\"",
      "object_id": "9-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "base-4-KBASE777.backpack",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
        Object {
          "equipped": "",
          "id": "9-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "parts": Array [
            "background",
            "backpack",
            "tail",
          ],
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "9-d43593c715a56da27d-KANARIABIRDS-KANR-00000999": Object {
      "block": 9,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "9-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000999",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip non existent NFT 1`] = `
Object {
  "bases": Object {},
  "collections": Object {},
  "invalid": Array [
    Object {
      "block": 2,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Attempting to equip a non-existant NFT 6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "object_id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {},
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip non-owned NFT  1`] = `
Object {
  "bases": Object {},
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 5,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[SEND] Attempting to send non-owned NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777, real owner: FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "SEND",
    },
    Object {
      "block": 6,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[EQUIP] Attempting to equip NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777 who's owner is account FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP. You can only EQUIP on parent NFT",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 4,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP Should fail to Equip not accepted NFT  1`] = `
Object {
  "bases": Object {},
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [
    Object {
      "block": 6,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[EQUIP] Cannot equip NFT 4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888 because it wasn't accepted by a parent yet",
      "object_id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "op_type": "EQUIP",
    },
  ],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "",
          "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": true,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 4,
      "burned": "",
      "changes": Array [
        Object {
          "block": 5,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "owner",
          "new": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "SEND",
        },
      ],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": true,
      "priority": Array [],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIP UNEquip NFT on another NFT successfully 1`] = `
Object {
  "bases": Object {
    "base-4-KBASE777": Object {
      "block": 4,
      "changes": Array [],
      "id": "base-4-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": Array [
        Object {
          "equippable": Array [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        Object {
          "equippable": Array [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        Object {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": Object {
        "themeOne": Object {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": Object {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": Array [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": Array [],
  "nfts": Object {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": Object {
      "block": 3,
      "burned": "",
      "changes": Array [],
      "children": Array [
        Object {
          "equipped": "",
          "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": Array [
        "xXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "base": "base-4-KBASE777",
          "id": "xXhhR",
          "parts": Array [
            "background",
            "backpack",
            "tail",
          ],
          "pending": false,
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": Object {
      "block": 6,
      "burned": "",
      "changes": Array [],
      "children": Array [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "6-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": Array [
        "jXhhR",
      ],
      "properties": Object {},
      "reactions": Object {},
      "resources": Array [
        Object {
          "id": "jXhhR",
          "pending": false,
          "slot": "base-4-KBASE777.backpack",
        },
      ],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;
